<resources>

    <!--application name-->
    <string name="app_name">Vox Radio 102.9</string>

    <!--navigation drawer menu name-->
    <string name="drawer_home">Inicio</string>
    <string name="drawer_social">Redes Sociales</string>
    <string name="drawer_rate">Valorar App</string>
    <string name="drawer_more">Contacto</string>
    <string name="drawer_programming">Programación</string>
    <string name="drawer_about_us">Quienes Somos?</string>
    <string name="drawer_exit">Salir!</string>
    <string name="drawer_facebook">Facebook</string>
    <string name="drawer_twitter">Twitter</string>
    <string name="drawer_instagram">Instagram</string>
    <string name="drawer_empty_title"></string>

    <!--about information-->
    <string name="app_version">Version 3.0.0</string>
    <string name="app_email">info@estudiosmax.com.ar</string>
    <string name="app_copyright">Copyright &#169; 2017 Estudios Max - Servicios Informaticos</string>
    <string name="share_summary">Compartir Con tus Amigos</string>
    <string name="rate_summary">Valor Aplicacion y Dejar Comentario</string>
    <string name="more_summary">Más aplicaciones de desarrollador</string>
    <string name="title_app_name">Nombre De La Alicacion</string>
    <string name="title_app_version">Version</string>
    <string name="title_app_email">E-Mail</string>
    <string name="title_app_copyright">Copyright</string>
    <string name="title_app_share">Compartir</string>
    <string name="title_app_rate">Valorar</string>
    <string name="title_app_more">Ver Mas</string>

    <!--admob banner and interstitial id-->
    <string name="admob_banner_id">ca-app-pub-5107556562590198/5609236067</string>
    <string name="admob_interstitial_id">ca-app-pub-5107556562590198/7085969260</string>

    <!--social network-->
    <string name="social_tab1">Facebook</string>
    <string name="social_tab2">Twitter</string>
    <string name="facebook_url">http://estudiosmax.com/app/radiovoxfm/facebook</string>
    <string name="twitter_url">http://estudiosmax.com/app/radiovoxfm/twitter</string>
    <string name="instagram_url">https://www.instagram.com/radiovoxfm/</string>

    <!-- play store application link i.e more apps -->
    <string name="play_more_apps">http://estudiosmax.com/app/radiovoxfm/</string>

    <!--share text-->
    <string name="share">Share</string>
    <string name="share_text">Me gustaría compartir esto con usted. Aquí puedes descargar esta aplicación de PlayStore</string>

    <!--radio player-->
    <string name="live_streaming">Estamos en vivo!</string>
    <string name="connecting">Conectando&#8230;</string>
    <string name="now_listening">Estas Escuchando :</string>

    <!--notification playing bar-->
    <string name="notification_title">Transmisión en vivo</string>
    <string name="notification_subtitle">Vox Radio 102.9</string>

    <!--connection-->
    <string name="alert_network">Por favor, active su conexión a Internet para reproducir la transmisión de radio!</string>
    <string name="error_retry">Radio Fuera De Linea, Probablemente el servidor actualmente este inactivo!</string>
    <string name="no_network">Error al conectar a la red de internet!</string>
    <string name="volume_low">¡Aumente el volumen para escuchar la radio!</string>

    <!--exit dialog-->
    <string name="message">Que Quieres Hacer?</string>
    <string name="quit">Salir!</string>
    <string name="minimize">Minimizar</string>
    <string name="cancel">Cancelar</string>

    <!--others-->
    <string name="drawer_open">Menú abierto</string>
    <string name="drawer_close">Menú cerrado</string>

    <!-- Sponsors  and Contact Us -->
    <string name="sponsors_title">Auspiciantes</string>
    <string name="contact_us_title">Comunicate Con Nuestra Area Comercial:</string>
    <string name="contact_us_phone_value">TELÉFONO 4250-4000 - 15-3266-2066</string>
    <string name="contact_us_mail_value">MAIL: ventas@fmradiovox.com</string>

    <string name="contact_us_phone_contact_value">Telefono 4200-6511</string>
    <string name="contact_us_whatsapp_value">Whatsapp : 11-6400-7047</string>
    <string name="contact_us_mail_contact">Mail : info@fmradiovox.com</string>
    <string name="contact_us_send_message_label">ENVIAR MENSAJE:</string>
    <string name="contact_us_name_label">Nombre</string>
    <string name="contact_us_email_label">E-mail</string>
    <string name="contact_us_send_message_text">Mensaje</string>
    <string name="contact_us_send_text_button">Enviar</string>


    <string name="who_we_are_text"> "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nisi sapien, viverra et pellentesque sit amet, ultricies sit amet lorem. Cras laoreet sit amet odio et auctor. Ut quis pharetra justo. Nulla accumsan suscipit pharetra. Nam eget euismod nulla. Cras pretium lectus a massa egestas ullamcorper. Sed a justo ornare, tincidunt metus scelerisque, consectetur justo.

    Nullam enim sapien, porta nec hendrerit vitae, gravida sollicitudin nisi. Suspendisse potenti. Nam auctor risus sit amet purus sollicitudin tincidunt. Aliquam erat volutpat. Sed dignissim mi sed lacus finibus bibendum. Ut sed metus commodo, molestie eros quis, cursus nunc. Integer nec pellentesque lorem, sed tempus est. Ut pharetra aliquam nibh, vel varius ipsum lobortis vitae. Praesent lacinia mattis rutrum. Sed eu cursus tortor, at tempus sapien. Fusce et est commodo, viverra tellus vitae, consectetur tellus. Lorem ipsum dolor sit amet, consectetur adipiscing elit.

    Nam congue diam quis nisi varius, quis faucibus est vestibulum. Mauris vel consequat tortor. Vivamus ac enim scelerisque, blandit lorem id, vestibulum f</string>


</resources>
