<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <!--
        <item
            android:id="@+id/drawer_home"
            android:icon="@drawable/ic_drawer_home"
            android:title="@string/drawer_home" />

        <item
            android:id="@+id/drawer_social"
            android:icon="@drawable/ic_drawer_social"
            android:title="@string/drawer_social" />

        <item
            android:id="@+id/drawer_about_us"
            android:icon="@drawable/ic_drawer_about"
            android:title="@string/drawer_about_us" />

        <item
            android:id="@+id/drawer_programming"
            android:icon="@drawable/ic_schedule"
            android:title="@string/drawer_programming" />

        <item
            android:id="@+id/drawer_more"
            android:icon="@drawable/ic_contact"
            android:title="@string/drawer_more" />

-->

        <item
            android:id="@+id/drawer_facebook"
            android:icon="@drawable/ic_facebook"
            android:title="@string/drawer_facebook" />
        <item
            android:id="@+id/drawer_twitter"
            android:icon="@drawable/ic_twitter"
            android:title="@string/drawer_twitter" />
        <item
            android:id="@+id/drawer_instagram"
            android:icon="@drawable/ic_instagram"
            android:title="@string/drawer_instagram" />

        <item
            android:id="@+id/drawer_exit"
            android:icon="@drawable/ic_exit_aoo"
            android:title="@string/drawer_exit" />

        <!--
        <item
            android:id="@+id/drawer_empty_space_1"
            android:title="@string/drawer_empty_title" />
            -->

        <item
            android:id="@+id/drawer_rate"
            android:icon="@drawable/ic_drawer_rate"
            android:title="@string/drawer_rate" />

    </group>

</menu>